# RiverReader

./: .gitignore  MVP.md  Plan.md  README.md  analysis_options.yaml  pubspec.yaml
backend/: .flutter-plugins-dependencies  pubspec.yaml  pyproject.toml  requirements.txt
backend/.dart_tool/: package_config.json  package_graph.json
backend/.dart_tool/extension_discovery/: vs_code.json
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: __init__.py  ai_routes.py  book_routes.py  dictionary_routes.py  game_routes.py  health_routes.py  highlight_routes.py  me_routes.py  review_routes.py  root_routes.py  user_routes.py  vault_routes.py  version_routes.py
backend/app/db/: __init__.py  engine.py  session.py
backend/app/models/: __init__.py  reading.py  user_profile.py
backend/app/schemas/: __init__.py  home.py  profile.py  reading.py  version.py
backend/app/services/: __init__.py  ai_service.py  book_service.py  dictionary_service.py  epub_parser.py  game_service.py  highlight_service.py  home_service.py  profile_service.py  progress_service.py  srs_service.py  vault_service.py
backend/data/books/: 1ca8b83c-4657-4472-846d-2c3d996faca4.epub  1f51b7b3-1e64-4282-ba0d-a9b139178fdd.epub
backend/lib/: river_reader_backend.dart
backend/lib/src/database/: database_service.dart
backend/lib/src/error/: error_logger.dart
backend/lib/src/providers/: backend_providers.dart
backend/lib/src/storage/: file_storage_manager.dart  file_storage_manager_web.dart
backend/lib/src/vault/: highlight_repository.dart
backend/tests/: test_mvp_api.py
(+77 files in other folders)
